@@ -258,13 +258,14 @@
     <div class="pt-3" modalBody>
         <div>
             <div class="d-flex align-items-center">
-                <mat-checkbox [color]="'primary'" [checked]="store.showAddress" (change)="editingStore.showAddress = !editingStore.showAddress" class="mr-2 d-inline-block mb-0"></mat-checkbox>
-                <label class="font-9" style="display: inline-flex; margin-bottom: .35rem">Show Store Location</label>
+                <mat-checkbox [color]="'primary'" [checked]="store.showAddress" (change)="editingStore.showAddress = !editingStore.showAddress" class="mr-2 d-inline-block mb-0">
+                    Show Store Location
+                </mat-checkbox>
             </div>
             <business-location [disabled]="!editingStore.showAddress" [address]="address" [mapController]="editingMapController"></business-location>
         </div>
         <div>
-            <button class="btn btn-sm btn-controller float-right" (click)="isAddressOpened = false">Close</button>
+            <button class="btn btn-sm btn-controller float-right" (click)="editingStore.showAddress = store.showAddress; isAddressOpened = false">Close</button>
             <button class="btn btn-sm btn-controller float-right mr-2" (click)="onConfirmEditAddressClicked()">Confirm</button>
         </div>
     </div>
