@@ -1,25 +1,4 @@
-<div class="row no-gutters">
-  <div class="row no-gutters w-100 mt-2">
-    <input  #addressInput class="form-control form-control-sm font-9" autocomplete="nope" placeholder="Address" [class.has-error]="address?.errors?.address != ''"
-    [(ngModel)]="address.address" required [disabled]="disabled" />
-  </div>
-  <div class="row no-gutters w-100 mt-2">
-    <input #postcodeInput name="postcode" autocomplete="nope" [class.has-error]="address?.errors?.postcode != ''" class="pl-2 form-control form-control-sm col-lg-3"
-      (input)="address.valueChanged()" placeholder="Postcode" [(ngModel)]="address.postcode"  [disabled]="disabled"/>
-    <input #stateInput name="state" autocomplete="nope" [class.has-error]="address?.errors?.state != ''" class="pl-2 form-control form-control-sm col-lg-3 mt-2 mt-lg-0 offset-lg-1"
-      (input)="address.valueChanged()" placeholder="State" [(ngModel)]="address.state"  [disabled]="disabled"/>
-    <mat-select #countryInput name="country" id="country-select" placeholder="Country" [class.has-error]="address?.errors?.country != ''" class="pl-2 form-control form-control-sm col-lg-4 mt-2 mt-lg-0 offset-lg-1"
-      style="color:#888" (input)="address.valueChanged()" [(ngModel)]="address.country" [disabled]="disabled">
-      <mat-option [value]="''">Country</mat-option>
-      <mat-option [value]="country" *ngFor="let country of data?.value">{{country}}</mat-option>
-    </mat-select>
-  </div>
-  <div class="row no-gutters w-100">
-    <p *ngIf="address?.errors?.postcode != ''" class="offset-2 mb-0 text-danger">{{address?.errors?.postcode}}</p>
-    <p *ngIf="address?.errors?.state != ''" class="offset-5 mb-0 text-danger">{{address?.errors?.state}}</p>
-    <p *ngIf="address?.errors?.country != ''" class="offset-9 mb-0 text-danger">{{address?.errors?.country}}</p>
-  </div>
-  <hr class="w-100" />
+<div class="row no-gutters py-3">
   <div class="w-100" (clickOutside)="clear()">
     <input name="address" autocomplete="off" class="form-control form-control-sm" placeholder="Search..."
       (keydown.enter)="mapController.onAddressSelected(); mapController.displayed = false" 
@@ -45,7 +24,7 @@
     </div>
   </div>
   <p class="text-muted mb-0 mt-2">*Click to set the accurate location for your customer</p>
-  <div class="border mb-3 w-100 position-relative">
+  <div class="border w-100 position-relative">
     <div class="w-100 map-screen" *ngIf="disabled"></div>
     <agm-map class="w-100" [longitude]="mapController.mapPoint.longitude" [latitude]="mapController.mapPoint.latitude" [zoom]="14" [gestureHandling]="'greedy'"
       [maxZoom]="18" [minZoom]="14" [streetViewControl]="false" panControl="false" zoomControl="false" (mapClick)="mapController.mapClick($event)">
@@ -59,4 +38,34 @@
   />
   <input name="lat" hidden class="form-control form-control-sm" type="text" [(ngModel)]="mapController.markerPoint.latitude"
   />
+  <div class="row no-gutters w-100 mt-2">
+    <label class="mb-0 font-9">Address:</label>
+    <input  #addressInput class="form-control form-control-sm font-9" autocomplete="nope" [class.has-error]="address?.errors?.address != ''"
+    [(ngModel)]="address.address" required [disabled]="disabled" />
+  </div>
+  <div class="row no-gutters w-100 mt-2">
+    <div class="col-lg-3">
+      <label class="mb-0 font-9">Postcode:</label>
+      <input #postcodeInput name="postcode" autocomplete="nope" [class.has-error]="address?.errors?.postcode != ''" class="form-control form-control-sm"
+        (input)="address.valueChanged()" [(ngModel)]="address.postcode"  [disabled]="disabled"/>
+    </div>
+    <div class="col-lg-3 mt-2 mt-lg-0 offset-lg-1">
+      <label class="mb-0 font-9">State:</label>
+      <input #stateInput name="state" autocomplete="nope" [class.has-error]="address?.errors?.state != ''" class="form-control form-control-sm"
+        (input)="address.valueChanged()" [(ngModel)]="address.state"  [disabled]="disabled"/>
+    </div>
+    <div class="col-lg-4 mt-2 mt-lg-0 offset-lg-1">
+      <label class="mb-0 font-9">Country:</label>
+      <mat-select #countryInput name="country" id="country-select" placeholder="Country" [class.has-error]="address?.errors?.country != ''" class="pl-2 form-control form-control-sm"
+        style="color:#888" (input)="address.valueChanged()" [(ngModel)]="address.country" [disabled]="disabled">
+        <mat-option [value]="''"></mat-option>
+        <mat-option [value]="country" *ngFor="let country of data?.value">{{country}}</mat-option>
+      </mat-select>
+    </div>
+  </div>
+  <div class="row no-gutters w-100">
+    <p *ngIf="address?.errors?.postcode != ''" class="offset-2 mb-0 text-danger">{{address?.errors?.postcode}}</p>
+    <p *ngIf="address?.errors?.state != ''" class="offset-5 mb-0 text-danger">{{address?.errors?.state}}</p>
+    <p *ngIf="address?.errors?.country != ''" class="offset-9 mb-0 text-danger">{{address?.errors?.country}}</p>
+  </div>
 </div>
